# aprs3

./: .pylintrc  COPYRIGHT.txt  README.rst  TODO.txt  pyproject.toml  setup.py  tox.ini
aprs/: __init__.py  aprsis.py  base91.py  classes.py  constants.py  decimaldegrees.py  geo_util.py  kiss.py  position.py  timestamp.py
aprs3/: __init__.py  aprsis.py  base91.py  classes.py  constants.py  data_ext.py  decimaldegrees.py  geo_util.py  kiss.py  parser.py  position.py  timestamp.py  util.py
examples/: aprsis_decode.py  tcp_kiss_send_recv.py
tests/: __init__.py  test_decode_regression.py  test_geo_util.py
