[build-system]
requires = [
    "setuptools>=61",
    "setuptools_scm[toml]>=6.2",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "aprs"
description = "Python module for encoding and decoding APRS data."
authors = [
    {name = "Masen Furer KF7HVM", email = "kf7hvm@0x26.net"},
    {name = "Greg Albrecht W2GMD", email = "oss@undef.net"}
]
dependencies = [
    "attrs > 20",
    "ax253 >= 0.1.5",
    "kiss3 >= 8.0.0",
]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Communications :: Ham Radio",
    "Programming Language :: Python",
    "License :: OSI Approved :: Apache Software License"
]
keywords=[
    'Ham Radio', 'APRS', 'KISS'
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/ampledata/aprs"

[tool.setuptools_scm]